--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,3 @@
 {
-  "$schema": "https://openapi.vercel.sh/vercel.json",
-  "regions": ["all"],
-  "functions": {
-    "api/**": {
-      "memory": 3008
-    }
-  },
-  "rewrites": [
-    { "source": "/(.+)", "destination": "/api" }
-  ]
+	"rewrites": [{ "source": "/(.+)", "destination": "/api" }]
 }
